<resources>
    <string name="app_name">Aaida</string>
    <string name="welcome">Welcome</string>
    <string name="user_thought">User Thought</string>
    <string name="ex_thought">Look at this user twit</string>
    <string name="home_welcom">Welcome to Aaida!</string>
    <string name="be_hero">With Aaida you can be a hero for them.</string>
    <string name="help_each_other">Help Each Other</string>
    <string name="home_banner">home banner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag">.@</string>
</resources>