<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingVertical="16dp"
    android:paddingHorizontal="16dp"
    tools:context=".ui.home.HomeActivity">

    <TextView
        android:id="@+id/tv_halo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/home_welcom"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_exhalo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/be_hero"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_halo"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/home_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:riv_corner_radius="20dp"
        android:src="@drawable/img_bg"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/home_banner"
        app:layout_constraintTop_toBottomOf="@id/tv_exhalo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_warn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="They need you"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/home_banner"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_twit"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/container_home"
        app:layout_constraintTop_toBottomOf="@id/tv_warn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>