<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_welcome"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            android:background="@drawable/card_bg">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:gravity="center|left"
                android:background="@drawable/card_bg">

                <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_each_other"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/view_support"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/container_linear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_welcome"/>

        <TextView
            android:id="@+id/tv_thought"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_thought"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/view_support"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_exThought"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand"
            android:text="@string/ex_thought"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_thought" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_userTwit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_exThought"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:outlineSpotShadowColor="@color/black"
            app:cardBackgroundColor="@color/ocean_blue">

            <RelativeLayout
                android:id="@+id/relative_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@color/white"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/iv_profile"
                    android:text="Debtya Vanni"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=".@debbbb"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginLeft="8dp"
                    android:layout_below="@id/tv_name"
                    android:layout_toRightOf="@id/iv_profile"/>

                <TextView
                    android:id="@+id/tv_twit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitati"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/quicksand_medium"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/iv_profile"/>

                <ImageView
                    android:id="@+id/iv_iconTwit"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@id/tv_twit"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/twitter_icon" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_depressLev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Depression Level"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/cv_userTwit"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_exdepLev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand"
            android:text="User depress prediction"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_depressLev" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_depLev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_exdepLev"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:outlineSpotShadowColor="@color/black"
            app:cardBackgroundColor="@color/ocean_blue">

            <RelativeLayout
                android:id="@+id/relative_supportC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:indeterminateOnly="false"
                    android:progressDrawable="@drawable/circle_probar"
                    tools:progress="50"/>

                <TextView
                    android:id="@+id/tv_persLev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/progress_bar"
                    android:layout_alignTop="@+id/progress_bar"
                    android:layout_alignEnd="@+id/progress_bar"
                    android:layout_alignBottom="@+id/progress_bar"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="25dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    tools:text="100%" />

                <TextView
                    android:id="@+id/tv_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/progress_bar"
                    android:layout_alignStart="@+id/progress_bar"
                    android:layout_alignEnd="@+id/progress_bar"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/quicksand"
                    android:gravity="center"
                    tools:text="Anxiety" />

                <TextView
                    android:id="@+id/tv_StressLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/progress_bar"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="Levels Category : " />

                <TextView
                    android:id="@+id/tv_levFirst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text=">30% Lorem Ipsum asde"
                    android:layout_marginStart="55dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/tv_StressLevel"
                    android:layout_toEndOf="@+id/progress_bar"/>

                <TextView
                    android:id="@+id/tv_levSec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text=">30% Lorem Ipsum asde"
                    android:layout_marginStart="55dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="2dp"
                    android:layout_below="@id/tv_levFirst"
                    android:layout_toEndOf="@+id/progress_bar"/>

                <TextView
                    android:id="@+id/tv_levThird"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text=">30% Lorem Ipsum asde"
                    android:layout_marginStart="55dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="2dp"
                    android:layout_below="@id/tv_levSec"
                    android:layout_toEndOf="@+id/progress_bar"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_chat"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Chat User"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_container"
            app:layout_constraintTop_toBottomOf="@id/cv_depLev"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_dm"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:text="DM User"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/btn_container"
            app:layout_constraintTop_toBottomOf="@id/cv_depLev"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Save"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_savebg"
            app:layout_constraintTop_toBottomOf="@id/btn_chat"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>