<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_welcome"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/card_bg"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_bg"
            android:gravity="center|left"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_each_other"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view_support"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/container_linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_welcome" />

    <TextView
        android:id="@+id/tv_thought"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/user_thought"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_support" />

    <TextView
        android:id="@+id/tv_exThought"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/ex_thought"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_thought" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_userTwit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:outlineSpotShadowColor="@color/black"
        app:cardBackgroundColor="@color/ocean_blue"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_exThought">

        <RelativeLayout
            android:id="@+id/relative_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="14dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="centerCrop"
                android:src="@drawable/pic_list" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/iv_profile"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Debtya Vanni" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/iv_profile"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text=".@debbbb" />

            <TextView
                android:id="@+id/tv_twit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_profile"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksand_medium"
                android:justificationMode="inter_word"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitati" />

            <ImageView
                android:id="@+id/iv_iconTwit"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@id/tv_twit"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/twitter_icon" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_following"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/ocean_blue"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_userTwit">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:text="Following"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_flw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_following"
                android:layout_alignStart="@+id/tv_following"
                android:layout_alignEnd="@+id/tv_following"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="Following"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:text="10" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_followers"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:outlineSpotShadowColor="@color/black"
        app:cardBackgroundColor="@color/ocean_blue"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_userTwit">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:text="Followers"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_flwrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_followers"
                android:layout_alignStart="@+id/tv_followers"
                android:layout_alignEnd="@+id/tv_followers"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="Following"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:text="10" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_depressLev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="13dp"
        android:text="Depression Score"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_following" />

    <TextView
        android:id="@+id/tv_exdepLev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:fontFamily="@font/quicksand"
        android:text="User depress prediction"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_depressLev" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_depLev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:outlineSpotShadowColor="@color/black"
        app:cardBackgroundColor="@color/ocean_blue"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_exdepLev">

        <RelativeLayout
            android:id="@+id/relative_supportC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="20dp">

            <TextView
                android:id="@+id/tv_tweetScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center"
                android:text="Tweet Score "
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_tweetScoretitik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_tweetScore"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center"
                android:text=":"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/tv_tweetScoretitik"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="0.999" />

            <TextView
                android:id="@+id/tv_scoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_tweetScore"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center"
                android:text="Label "
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_labeltitik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_tweetScoretitik"
                android:layout_marginTop="3dp"
                android:layout_toRightOf="@id/tv_tweetScore"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center"
                android:text=":"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_score"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="3dp"
                android:layout_toRightOf="@id/tv_labeltitik"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Positiv" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_dm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/btn_container"
        android:text="DM User"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_depLev"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>